--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<img src="https://en.gravatar.com/userimage/4825411/5b4f1e4d52b2b98b5befdb9fc008d9cb.jpeg" alt="Tushar's avatar">
+
 Tushar's shonky info.
+
+<ul>
+    <li>My <a href="https://www.youtube.com/channel/UCo86_4Tr29ZQwyBHFXLuyVg">Youtube channel with Hang Gliding videos</a></li>
+    <li>Hang Gliding GPS <a href="waypoints">Waypoints</a></li>
+</ul>
