--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src="https://en.gravatar.com/userimage/4825411/5b4f1e4d52b2b98b5befdb9fc008d9cb.jpeg" alt="Tushar's avatar">
+<img src="https://www.gravatar.com/avatar/e729800ee17549325d97ed9d108e567e" alt="Tushar's avatar">
 
 Tushar's shonky info.
 
