--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
-<img src="https://www.gravatar.com/avatar/e729800ee17549325d97ed9d108e567e" alt="Tushar's avatar">
+<html>
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <img src="https://www.gravatar.com/avatar/e729800ee17549325d97ed9d108e567e" alt="Tushar's avatar">
 
-Tushar's shonky info.
+        Tushar's shonky info.
 
-<ul>
-    <li>My <a href="https://www.youtube.com/channel/UCo86_4Tr29ZQwyBHFXLuyVg">Youtube channel with Hang Gliding videos</a></li>
-    <li>Hang Gliding GPS <a href="waypoints">Waypoints</a></li>
-</ul>
+        <ul>
+            <li>My <a href="https://www.youtube.com/channel/UCo86_4Tr29ZQwyBHFXLuyVg">Youtube channel with Hang Gliding videos</a></li>
+            <li>Hang Gliding GPS <a href="waypoints">Waypoints</a></li>
+        </ul>
+
+    </body>
+</html>
+
