--- a/waypoints/index.html
+++ b/waypoints/index.html
@@ -1,12 +1,22 @@
-<h1>Waypoints</h1>
+<html>
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
 
-<ul>
-    <li><a href="Corryong 2021 waypoints OZiexplorer.wpt">Corryong 2021 waypoints OZiexplorer.wpt</a>
-    <li><a href="Corryong 2021 waypoints.cup">Corryong 2021 waypoints.cup</a>
-    <li><a href="Corryong 2021 waypoints.gpx">Corryong 2021 waypoints.gpx</a>
-    <li><a href="Corryong 2021 waypoints.kml">Corryong 2021 waypoints.kml</a>
-    <li><a href="bigk wpt file 241117 OZiexplorer.wpt">bigk wpt file 241117 OZiexplorer.wpt</a>
-    <li><a href="bigk wpt file 241117.gpx">bigk wpt file 241117.gpx</a>
-    <li><a href="birchip.wpt">birchip.wpt</a>
-    <li><a href="westvic.wpt">westvic.wpt</a>
-</ul>
+    <h1>Waypoints</h1>
+
+    <ul>
+        <li><a href="Corryong 2021 waypoints OZiexplorer.wpt">Corryong 2021 waypoints OZiexplorer.wpt</a>
+        <li><a href="Corryong 2021 waypoints.cup">Corryong 2021 waypoints.cup</a>
+        <li><a href="Corryong 2021 waypoints.gpx">Corryong 2021 waypoints.gpx</a>
+        <li><a href="Corryong 2021 waypoints.kml">Corryong 2021 waypoints.kml</a>
+        <li><a href="bigk wpt file 241117 OZiexplorer.wpt">bigk wpt file 241117 OZiexplorer.wpt</a>
+        <li><a href="bigk wpt file 241117.gpx">bigk wpt file 241117.gpx</a>
+        <li><a href="birchip.wpt">birchip.wpt</a>
+        <li><a href="westvic.wpt">westvic.wpt</a>
+    </ul>
+
+</body>
+</html>
