--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <img src="https://www.gravatar.com/avatar/e729800ee17549325d97ed9d108e567e" alt="Tushar's avatar">
 
-        Tushar's shonky info.
+        Tushar's shonky info and some other stuff
 
         <ul>
             <li>
