Added TPC swapped files

--- a/waypoints/index.html
+++ b/waypoints/index.html
@@ -16,6 +16,8 @@
         <li><a href="bigk wpt file 241117.gpx">bigk wpt file 241117.gpx</a>
         <li><a href="birchip.wpt">birchip.wpt</a>
         <li><a href="westvic.wpt">westvic.wpt</a>
+        <li><a href="TPCVictoria2021-v1.0-swapped.wpt">Turn Point Challenge Victoria 2021-v1.0 - names and descriptions swapped - in WPT format</a></li>
+        <li><a href="TPCVictoria2021-v1.0-swapped.kml">Turn Point Challenge Victoria 2021-v1.0 - names and descriptions swapped - in KML format</a></li>
     </ul>
 
 </body>
