The waypoints index page has been organized into two sections: "Corryong" and "Rest of   Victoria". Each section now has its own heading and a separate list of waypoints, making it   easier to find specific waypoint files.

--- a/waypoints/index.html
+++ b/waypoints/index.html
@@ -7,15 +7,20 @@
 
     <h1>Waypoints</h1>
 
+    <h2>Corryong</h2>
     <ul>
-        <li><a href="Corryong 2021 waypoints OZiexplorer.wpt">Corryong 2021 waypoints OZiexplorer.wpt</a>
-        <li><a href="Corryong 2021 waypoints.cup">Corryong 2021 waypoints.cup</a>
-        <li><a href="Corryong 2021 waypoints.gpx">Corryong 2021 waypoints.gpx</a>
-        <li><a href="Corryong 2021 waypoints.kml">Corryong 2021 waypoints.kml</a>
-        <li><a href="bigk wpt file 241117 OZiexplorer.wpt">bigk wpt file 241117 OZiexplorer.wpt</a>
-        <li><a href="bigk wpt file 241117.gpx">bigk wpt file 241117.gpx</a>
-        <li><a href="birchip.wpt">birchip.wpt</a>
-        <li><a href="westvic.wpt">westvic.wpt</a>
+        <li><a href="Corryong 2021 waypoints OZiexplorer.wpt">Corryong 2021 waypoints OZiexplorer.wpt</a></li>
+        <li><a href="Corryong 2021 waypoints.cup">Corryong 2021 waypoints.cup</a></li>
+        <li><a href="Corryong 2021 waypoints.gpx">Corryong 2021 waypoints.gpx</a></li>
+        <li><a href="Corryong 2021 waypoints.kml">Corryong 2021 waypoints.kml</a></li>
+    </ul>
+
+    <h2>Rest of Victoria</h2>
+    <ul>
+        <li><a href="bigk wpt file 241117 OZiexplorer.wpt">bigk wpt file 241117 OZiexplorer.wpt</a></li>
+        <li><a href="bigk wpt file 241117.gpx">bigk wpt file 241117.gpx</a></li>
+        <li><a href="birchip.wpt">birchip.wpt</a></li>
+        <li><a href="westvic.wpt">westvic.wpt</a></li>
         <li><a href="TPCVictoria2021-v1.0-swapped.wpt">Turn Point Challenge Victoria 2021-v1.0 - names and descriptions swapped - in WPT format</a></li>
         <li><a href="TPCVictoria2021-v1.0-swapped.kml">Turn Point Challenge Victoria 2021-v1.0 - names and descriptions swapped - in KML format</a></li>
     </ul>
