--- a/waypoints/index.html
+++ b/waypoints/index.html
@@ -21,6 +21,17 @@
             .map-container {
                 margin-bottom: 20px;
             }
+            /* Style for waypoint labels */
+            .waypoint-label {
+                background: rgba(255, 255, 255, 0.7);
+                border: none;
+                border-radius: 3px;
+                box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+                padding: 1px 4px;
+                font-size: 11px;
+                white-space: nowrap;
+                pointer-events: none;
+            }
         </style>
     </head>
     <body>
@@ -151,16 +162,21 @@
                                                 .trim()
                                                 .split(",")
                                                 .map(parseFloat);
-
-                                        // Create marker
-                                        const marker = L.marker([
-                                            latitude,
-                                            longitude
-                                        ])
-                                            .addTo(window.map)
-                                            .bindPopup(
-                                                `<b>${name}</b><br>${desc}`
-                                            );
+                                        
+                                        // Create a clickable div icon (transparent with no visible marker)
+                                        const divIcon = L.divIcon({
+                                            className: 'waypoint-label',
+                                            html: name,
+                                            iconSize: [100, 20],
+                                            iconAnchor: [50, 10]
+                                        });
+                                        
+                                        // Add marker with div icon (this will just show the name)
+                                        L.marker([latitude, longitude], {
+                                            icon: divIcon
+                                        })
+                                        .addTo(window.map)
+                                        .bindPopup(`<b>${name}</b><br>${desc}`);
                                     }
                                 }
                             }
