⏺ I've updated the distance labels to better match the route lines:
  1. Changed the background color to match the route line color (#ff4500) with some transparency
  2. Made the text white for better readability against the orange background
  3. Kept the border the same orange color as the line
  4. Added CSS to properly center the text within the label
  5. Increased the label height slightly for better visibility

  The distance labels now look much more integrated with the route lines while remaining readable.

--- a/waypoints/index.html
+++ b/waypoints/index.html
@@ -103,8 +103,8 @@
                 margin-bottom: 5px;
             }
             .distance-label {
-                background: rgba(255, 255, 255, 0.9);
-                color: #ff4500;
+                background: rgba(255, 69, 0, 0.75); /* #ff4500 with opacity */
+                color: white;
                 border: 1px solid #ff4500;
                 border-radius: 3px;
                 padding: 2px 6px;
@@ -113,6 +113,11 @@
                 white-space: nowrap;
                 pointer-events: none;
                 z-index: 1000;
+                text-align: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                min-width: 50px;
             }
             .selected-waypoint {
                 fill: #ff4500;
@@ -296,11 +301,12 @@
                                 const midLon = (lon1 + lon2) / 2;
                                 
                                 // Create label icon - matching the line color (#ff4500)
+                                const distText = distance.toFixed(1) + ' km';
                                 const distanceIcon = L.divIcon({
                                     className: 'distance-label',
-                                    html: distance.toFixed(1) + ' km',
-                                    iconSize: [80, 20],
-                                    iconAnchor: [40, 10]
+                                    html: `<div style="width:100%;text-align:center;">${distText}</div>`,
+                                    iconSize: [80, 24],
+                                    iconAnchor: [40, 12]
                                 });
                                 
                                 // Create and return the marker with high z-index to stay on top
