--- a/waypoints/index.html
+++ b/waypoints/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Waypoints editor</title>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css"
