--- a/waypoints/index.html
+++ b/waypoints/index.html
@@ -25,8 +25,9 @@
 
             /* Ensure Leaflet layer control icon renders correctly */
             .leaflet-control-layers-toggle {
-                background-repeat: no-repeat;
-                background-size: 26px 26px;
+                background-repeat: no-repeat !important;
+                background-size: 16px 16px !important;
+                background-position: center !important;
             }
             /* Style for waypoint labels */
             .waypoint-label {
