--- a/waypoints/index.html
+++ b/waypoints/index.html
@@ -312,6 +312,11 @@
                     >Corryong 2021 waypoints.kml</a
                 >
             </li>
+            <li>
+                <a href="Corryong 2021 waypoints.csv"
+                    >Corryong 2021 waypoints.csv</a
+                >
+            </li>
         </ul>
 
         <h2>Rest of Victoria</h2>
